chore(): SQLite migration with JPA : Add campaign and executions (#1040)